footer and nav spacing fixes

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -65,7 +65,7 @@ p, h1, h2, h3, h4 {
   /* Set the fixed height of the footer here */
   height: 90px;
   background-color: #323232;
-  line-height: 90px; /* Vertically center the text there */
+  line-height: 60px; /* Vertically center the text there */
 }
 
 .footer p {
@@ -396,6 +396,14 @@ color: #ff323b;
 .Adoption-Request {
     color: #feff00;
 
+}
+
+.Bootcamp-Assigned {
+    color: #607d8b;
+}
+
+.Bootcamp-Ready {
+    color: #9c27b0;
 }
 
 .links-link {
